--- a/index.html
+++ b/index.html
@@ -17,51 +17,58 @@
         </div>
     </nav>
     <div class="hero">
-        <h1>Super Fast Web Hosting</h1>
-        <p>The best web hosting for your website, fast and reliable.</p>
-        <a href="#packages"><button>Order Now</button></a>
+        <h1>Welcome to WebHosting</h1>
+        <p>Your one-stop solution for reliable and fast web hosting services.</p>
+        <a href="#packages"><button>Learn More</button></a>
     </div>
     <section id="packages" class="plans">
         <h2>Our Packages</h2>
         <div class="plan-container">
             <div class="plan">
-                <img src="Images/Icon1.png" alt="Bronze Package Image" class="plan-image">
-                <h2>Bronze</h2>
+                <div class="plan-image">
+                    <img src="Images/Rank1.png" alt="Bronze Package">
+                    <div class="price-tag">€4,99</div>
+                </div>
+                <h3>Bronze Package</h3>
+                <p>Perfect for small websites</p>
                 <ul>
-                    <li>1 Website</li>
-                    <li>10GB SSD</li>
-                    <li>Free SSL</li>
+                    <li>5GB Storage</li>
+                    <li>10GB Bandwidth</li>
+                    <li>5 Email Accounts</li>
                     <li>24/7 Support</li>
-                    <li>Daily Backups</li>
                 </ul>
-                <button>Buy Now</button>
+                <button>Purchase</button>
             </div>
             <div class="plan">
-                <img src="Images/Icon2.png" alt="Silver Package Image" class="plan-image">
-                <h2>Silver</h2>
+                <div class="popular-badge">Most Popular</div>
+                <div class="plan-image">
+                    <img src="Images/Rank2.png" alt="Silver Package">
+                    <div class="price-tag">€8,99</div>
+                </div>
+                <h3>Silver Package</h3>
+                <p>Ideal for growing businesses</p>
                 <ul>
-                    <li>5 Websites</li>
-                    <li>50GB SSD</li>
-                    <li>Free SSL & Backup</li>
+                    <li>20GB Storage</li>
+                    <li>50GB Bandwidth</li>
+                    <li>20 Email Accounts</li>
                     <li>24/7 Support</li>
-                    <li>Daily Backups</li>
-                    <li>Free Domain for 1 Year</li>
                 </ul>
-                <button>Buy Now</button>
+                <button>Purchase</button>
             </div>
             <div class="plan">
-                <img src="Images/Icon3.png" alt="Gold Package Image" class="plan-image">
-                <h2>Gold</h2>
+                <div class="plan-image">
+                    <img src="Images/Rank3.png" alt="Gold Package">
+                    <div class="price-tag">€11,99</div>
+                </div>
+                <h3>Gold Package</h3>
+                <p>For high-traffic websites</p>
                 <ul>
-                    <li>Unlimited Websites</li>
-                    <li>200GB SSD</li>
-                    <li>Priority Support</li>
+                    <li>50GB Storage</li>
+                    <li>Unlimited Bandwidth</li>
+                    <li>Unlimited Email Accounts</li>
                     <li>24/7 Support</li>
-                    <li>Daily Backups</li>
-                    <li>Free Domain for 1 Year</li>
-                    <li>Advanced Security Features</li>
                 </ul>
-                <button>Buy Now</button>
+                <button>Purchase</button>
             </div>
         </div>
     </section>
@@ -77,7 +84,7 @@
                     <img src="Images/Icon4.png" alt="24/7 Service">
                 </div>
             </div>
-            <div class="about-item reverse">
+            <div class="about-item">
                 <div class="about-image">
                     <img src="Images/Icon5.png" alt="Customer Service Speed">
                 </div>
@@ -102,7 +109,7 @@
         <div class="contact-container">
             <div class="contact-info">
                 <h3>Get in Touch</h3>
-                <p>Have questions about our hosting packages? We're here to help!</p>
+                <p>Having any questions about our hosting packages or something else? We're here to help!</p>
                 <div class="contact-details">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -110,7 +117,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+31 6 27203288</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
@@ -131,6 +138,7 @@
                         <option value="bronze">Bronze Package</option>
                         <option value="silver">Silver Package</option>
                         <option value="gold">Gold Package</option>
+                        <option value="other">Other</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -140,6 +148,9 @@
             </form>
         </div>
     </section>
+    <div class="scroll-arrow" id="scrollArrow">
+        <img src="Images/ArrowScroll.png" alt="Scroll to next section">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
