--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"> <a href="#top"><img src="Images/logo.png" alt="Logo"></a> </div>
+        <div class="logo">
+            <a href="#"><img src="Images/Logo.png" alt="WebHosting Logo"></a>
+        </div>
         <div class="nav-links">
-            <a href="#packages">Plans</a>
+            <a href="#packages">Packages</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
+    <button id="closeDisco" class="close-disco" style="display: none;">
+        <img src="Images/Cross.png" alt="Close">
+    </button>
     <div class="hero">
         <h1>Welcome to WebHosting</h1>
         <p>Your one-stop solution for reliable and fast web hosting services.</p>
