--- a/index.html
+++ b/index.html
@@ -32,48 +32,63 @@
             <div class="plan">
                 <div class="plan-image">
                     <img src="Images/Rank1.png" alt="Bronze Package">
-                    <div class="price-tag">€4,99</div>
                 </div>
-                <h3>Bronze Package</h3>
-                <p>Perfect for small websites</p>
-                <ul>
-                    <li>5GB Storage</li>
-                    <li>10GB Bandwidth</li>
-                    <li>5 Email Accounts</li>
-                    <li>24/7 Support</li>
-                </ul>
-                <button>Purchase</button>
+                <div class="plan-content">
+                    <div class="price-tag">€4.99/month</div>
+                    <div class="plan-description">
+                        <p>Perfect for small businesses and personal websites</p>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li><span>5GB Storage</span></li>
+                            <li><span>10GB Bandwidth</span></li>
+                            <li><span>5 Email Accounts</span></li>
+                            <li><span>Basic Support</span></li>
+                        </ul>
+                    </div>
+                    <button class="dark-blue">Purchase</button>
+                </div>
             </div>
             <div class="plan">
                 <div class="popular-badge">Most Popular</div>
                 <div class="plan-image">
                     <img src="Images/Rank2.png" alt="Silver Package">
-                    <div class="price-tag">€8,99</div>
                 </div>
-                <h3>Silver Package</h3>
-                <p>Ideal for growing businesses</p>
-                <ul>
-                    <li>20GB Storage</li>
-                    <li>50GB Bandwidth</li>
-                    <li>20 Email Accounts</li>
-                    <li>24/7 Support</li>
-                </ul>
-                <button>Purchase</button>
+                <div class="plan-content">
+                    <div class="price-tag">€8.99/month</div>
+                    <div class="plan-description">
+                        <p>Ideal for growing businesses and e-commerce sites</p>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li><span>20GB Storage</span></li>
+                            <li><span>50GB Bandwidth</span></li>
+                            <li><span>20 Email Accounts</span></li>
+                            <li><span>Priority Support</span></li>
+                        </ul>
+                    </div>
+                    <button class="dark-blue">Purchase</button>
+                </div>
             </div>
             <div class="plan">
                 <div class="plan-image">
                     <img src="Images/Rank3.png" alt="Gold Package">
-                    <div class="price-tag">€11,99</div>
                 </div>
-                <h3>Gold Package</h3>
-                <p>For high-traffic websites</p>
-                <ul>
-                    <li>50GB Storage</li>
-                    <li>Unlimited Bandwidth</li>
-                    <li>Unlimited Email Accounts</li>
-                    <li>24/7 Support</li>
-                </ul>
-                <button>Purchase</button>
+                <div class="plan-content">
+                    <div class="price-tag">€11.99/month</div>
+                    <div class="plan-description">
+                        <p>Best for large businesses and high-traffic websites</p>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li><span>50GB Storage</span></li>
+                            <li><span>Unlimited Bandwidth</span></li>
+                            <li><span>Unlimited Email Accounts</span></li>
+                            <li><span>24/7 Premium Support</span></li>
+                        </ul>
+                    </div>
+                    <button class="dark-blue">Purchase</button>
+                </div>
             </div>
         </div>
     </section>
