--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
     <div class="scroll-arrow" id="scrollArrow">
         <img src="Images/ArrowScroll.png" alt="Scroll to next section">
     </div>
+
+    <div class="party-mode-toggle">
+        <label>
+            <input type="checkbox" id="partyModeCheckbox"> Party Mode
+        </label>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
