--- a/aankoop.html
+++ b/aankoop.html
@@ -43,5 +43,31 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <h1>Bestelling Bevestigen</h1>
+        <div class="order-details">
+            <h2>Bestelgegevens</h2>
+            <p>Geselecteerd Pakket: <span id="selectedPackage"></span></p>
+            <p>Prijs: <span id="packagePrice"></span></p>
+        </div>
+
+        <div class="upload-section">
+            <h2>Upload ZIP Bestand</h2>
+            <form id="uploadForm" class="upload-form">
+                <div class="form-group">
+                    <label for="zipFile">Selecteer ZIP Bestand:</label>
+                    <input type="file" id="zipFile" name="zipFile" accept=".zip" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mailadres:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <button type="submit" class="confirm-button">Bevestigen</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="aankoop.js"></script>
 </body>
 </html>
