--- a/aankoop.html
+++ b/aankoop.html
@@ -3,55 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aankoop</title>
+    <title>Upload your webpage files!</title>
     <link href="Styles.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="plans" style="background: url('Images/Background2.gif') no-repeat center center fixed; background-size: cover;">
-        <h2>Onze Pakketten</h2>
-        <div class="plan-container">
-            <div class="plan">
-                <img src="Images/Icon1.png" alt="Package Image" class="plan-image">
-                <h2>Basic</h2>
-                <ul>
-                    <li>- 1 Website</li>
-                    <li>- 10GB SSD</li>
-                    <li>- Gratis SSL</li>
-                </ul>
-                <button>Koop Nu</button>
-            </div>
-            <div class="plan">
-                <img src="Images/Icon2.png" alt="Package Image" class="plan-image">
-                <h2>Premium</h2>
-                <ul>
-                    <li>- 5 Websites</li>
-                    <li>- 50GB SSD</li>
-                    <li>- Gratis SSL & Backup</li>
-                </ul>
-                <button>Koop Nu</button>
-            </div>
-            <div class="plan">
-                <img src="Images/Icon3.png" alt="Package Image" class="plan-image">
-                <h2>Business</h2>
-                <ul>
-                    <li>- Onbeperkt Websites</li>
-                    <li>- 200GB SSD</li>
-                    <li>- Prioriteit Support</li>
-                </ul>
-                <button>Koop Nu</button>
-            </div>
-        </div>
-    </div>
-
     <div class="container">
-        <h1>Bestelling Bevestigen</h1>
-        <div class="order-details">
-            <h2>Bestelgegevens</h2>
-            <p>Geselecteerd Pakket: <span id="selectedPackage"></span></p>
-            <p>Prijs: <span id="packagePrice"></span></p>
-        </div>
-
+        <h1>Upload your webpage files!</h1>
         <div class="upload-section">
             <h2>Upload ZIP Bestand</h2>
             <form id="uploadForm" class="upload-form">
