--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="Images/Logo.png" alt="WebHosting Logo"></a>
+            <a href="#"><img src="Images/Logo.png" alt="Logo"></a>
         </div>
         <div class="nav-links">
+            <a href="#home">Home</a>
             <a href="#packages">Packages</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
@@ -21,11 +22,11 @@
     <button id="closeDisco" class="close-disco" style="display: none;">
         <img src="Images/Cross.png" alt="Close">
     </button>
-    <div class="hero">
+    <section id="home" class="hero">
         <h1>Welcome to WebHosting</h1>
         <p>Your one-stop solution for reliable and fast web hosting services.</p>
         <a href="#packages"><button>Learn More</button></a>
-    </div>
+    </section>
     <section id="packages" class="plans">
         <h2>Our Packages</h2>
         <div class="plan-container">
@@ -92,7 +93,7 @@
             </div>
         </div>
     </section>
-    <section class="about" id="about">
+    <section id="about" class="about">
         <h2>About Us</h2>
         <div class="about-container">
             <div class="about-item">
@@ -124,7 +125,7 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="contact">
+    <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <div class="contact-container">
             <div class="contact-info">
